fixed navbar issue seen on mobile

--- a/index.css
+++ b/index.css
@@ -181,7 +181,7 @@ ul {
   display: flex;
   justify-content: space-between;
   align-items: baseline;
-  padding-inline-end: 2rem;
+  padding-inline-end: 0rem;
 }
 
 li {
